# x-JingWei

./: .gitignore  README.en.md  README.md  __init__.py
.claude/: settings.json
server/: .env.example  .gitignore  Dockerfile  README.md  config.yaml  docker-compose.yml  pyproject.toml  start.py
server/config/: config.yaml
server/examples/: __init__.py  config_example.py  dependency_injection.py  document_upload.py  llm_chat.py
server/scripts/: fix_imports.py  lint.ps1  lint.sh  start.ps1  start.sh  test.ps1  test.sh
server/src/: __init__.py  main.py
server/src/api/: __init__.py  router.py
server/src/api/v1/: __init__.py  document.py  health.py  llm.py  version.py  workflow.py
server/src/common/: __init__.py
server/src/constants/: __init__.py  constants.py  enums.py
server/src/core/: config.py  container.py  exceptions.py  logger.py  middleware.py  response.py  schemas.py
server/src/infra/mysql/: __init__.py  models.py  mysql.py
server/src/models/: __init__.py  base.py  document.py  llm.py  workflow.py
server/src/repositories/: __init__.py  base.py  document_repository.py  workflow_repository.py
server/src/schemas/: __init__.py  base.py  common.py  document.py  llm.py  workflow.py
server/src/service/: document_service.py
server/src/services/: __init__.py  document_service.py  llm_service.py  workflow_service.py
server/src/utils/: __init__.py  helpers.py
server/src/workflow/: __init__.py  engine.py  executor.py  models.py  nodes.py
server/tests/: __init__.py  conftest.py  test_api.py  test_config.py  test_utils.py
server/utils/: __init__.py  validators.py
web/: README.md  index.html  package-lock.json  package.json
web/src/: App.tsx
web/src/components/: NodePanel.tsx  PropertyPanel.tsx  WorkflowCanvas.tsx  WorkflowNode.tsx
web/src/pages/: Editor.tsx  WorkflowList.tsx
web/src/stores/: workflowStore.ts
web/src/types/: workflow.ts
web/src/utils/: api.ts
