[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "x-jingwei"
version = "0.1.0"
description = "JingWei Learning and Training Project - Production Grade LLM Application Development Platform"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "夜雨诗来", email = "john.young@foxmail.com"}
]
maintainers = [
    {name = "夜雨诗来", email = "john.young@foxmail.com"}
]
keywords = ["jingwei", "llm", "ai", "rag", "fastapi"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: FastAPI",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
requires-python = ">=3.11"
dependencies = [
    # Web Framework
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.9",

    # Configuration & Logging
    "pyyaml>=6.0.1",
    "python-dotenv>=1.0.1",
    "loguru>=0.7.2",

    # Data Validation & Serialization
    "pydantic>=2.5.3",
    "pydantic-settings>=2.1.0",

    # Middleware
    "slowapi>=0.1.9",

    # HTTP Client
    "httpx>=0.26.0",
    "aiohttp>=3.9.1",

    # Utilities
    "python-dateutil>=2.8.2",
    "pytz>=2024.1",

    # Database
    "sqlalchemy>=2.0.25",
    "aiomysql>=0.2.0",
    "pymysql>=1.1.0",
    "cryptography>=42.0.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=7.4.4",
    "pytest-asyncio>=0.23.3",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "httpx>=0.26.0",

    # Code Quality
    "black>=24.1.1",
    "ruff>=0.1.15",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",

    # Documentation
    "mkdocs>=1.5.3",
    "mkdocs-material>=9.5.3",
    "mkdocstrings[python]>=0.24.0",
]

[project.urls]
Homepage = "https://gitee.com/yeyushilai/x-jingwei"
Repository = "https://gitee.com/yeyushilai/x-jingwei"
Documentation = "https://gitee.com/yeyushilai/x-jingwei"
Issues = "https://gitee.com/yeyushilai/x-jingwei/issues"

[project.scripts]
x-jingwei = "src.main:main"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]
exclude = ["tests*", "examples*", "docs*", "scripts*"]

[tool.black]
line-length = 100
target-version = ['py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py311"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.isort]
known-first-party = ["src"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "silent"
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
pythonpath = ["src"]
markers = [
    "unit: marks tests as unit tests",
    "integration: marks tests as integration tests",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/examples/*",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]